# semcache

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  config.yaml
.github/workflows/: deploy-docs.yml  docs.yml  test.yaml
assets/: admin.js  style.css
docker/: Dockerfile  Dockerfile.faiss  Dockerfile.test  build_faiss.sh  example.env
docs/: CNAME
docs/semcache/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/semcache/docs/: API.md  getting-started.md  intro.md  llm-providers-tools.md
docs/semcache/docs/api/: chat-completions.md  headers.md  supported-providers.md
docs/semcache/docs/configuration/: cache-settings.md  embedding-model.md  monitoring.md
docs/semcache/docs/guides/: performance-tuning.md  provider-setup.md  quick-start.md
monitoring/: README.md  docker-compose.yaml  prometheus.yaml
scripts/: request.py
src/: app_state.rs  config.rs  main.rs  metrics.rs
src/cache/: cache.rs  cache_impl.rs  error.rs  lru_cache.rs  mod.rs  response_store.rs  semantic_store.rs
src/cache/semantic_store/: faiss_store.rs  flat_ip_faiss_store.rs  mod.rs  semantic_store.rs
src/clients/: client.rs  http_client.rs  mod.rs
src/embedding/: error.rs  fastembed.rs  mod.rs  service.rs
src/endpoints/: chat.rs  mod.rs
src/endpoints/admin/: handler.rs
src/endpoints/cache_aside/: handler.rs
src/endpoints/chat/: dto.rs  error.rs  errors.rs  handler.rs  mod.rs  provider_handlers.rs
src/endpoints/metrics/: handler.rs
src/metrics/: dashboard.rs  metrics.rs  mod.rs
src/providers/: anthropic.rs  generic.rs  mod.rs  openai.rs
src/utils/: cgroup_utils.rs  header_utils.rs  json_extract.rs  linear_algebra.rs  mod.rs
templates/: admin.html
tests/: smoke_test.rs
tests/manual/: smoke_test.rs
(+8 files in other folders)
