[package]
name = "semcache-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
reqwest = {version = "0.12.15", features = ["json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.0.0", features = ["full"]}
url = "2.5.4"
thiserror = "2.0.12"
fastembed = "4"
dashmap = "6.1.0"
faiss = "0.12.1"
