[package]
name = "semcache-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
reqwest = {version = "0.12.15", features = ["json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.0.0", features = ["full"]}
url = "2.5.4"
thiserror = "2.0.12"
fastembed = "4"
dashmap = "6.1.0"
faiss = "0.12.1"
askama = "0.14.0"
prometheus = "0.14.0"
prometheus-static-metric = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5.0", features = ["fs"] }
lazy_static = "1.5.0"