[package]
name = "semcache-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
reqwest = {version = "0.12.15", features = ["json", "gzip"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.0.0", features = ["full"]}
url = "2.5.4"
thiserror = "2.0.12"
fastembed = "4"
faiss = "0.12.1"
askama = "0.14.0"
prometheus = "0.14.0"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5.0", features = ["fs"] }
mockall = "0.13.1"
lru = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
ordered-float = "5.0.0"
async-trait = "0.1.88"
config = "0.15.11"
jsonpath-rust = "1.0.2"
